syntax = "proto3";
package sonrio.sonr.channel;
import "channel/how_is.proto";
import "channel/channel.proto";
import "object/object.proto";
import "registry/who_is.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sonr-io/blockchain/x/channel/types";

// Msg defines the Msg service.
service Msg {
  // CreateChannel
  //
  // CreateChannel creates a new channel doc on the channel module of the blockchain.
  rpc CreateChannel(MsgCreateChannel) returns (MsgCreateChannelResponse);

  // UpdateChannel
  //
  // UpdateChannel updates an existing channel doc on the channel module of the blockchain.
  rpc UpdateChannel(MsgUpdateChannel) returns (MsgUpdateChannelResponse);

  // DeactivateChannel
  //
  // DeactivateChannel deactivates an existing channel doc on the channel module of the blockchain.
  rpc DeactivateChannel(MsgDeactivateChannel) returns (MsgDeactivateChannelResponse);

  // CreateHowIs
  //
  // CreateHowIs creates a new how is doc on the channel module of the blockchain.
  rpc CreateHowIs(MsgCreateHowIs) returns (MsgCreateHowIsResponse);

  // UpdateHowIs
  //
  // UpdateHowIs updates an existing how is doc on the channel module of the blockchain.
  rpc UpdateHowIs(MsgUpdateHowIs) returns (MsgUpdateHowIsResponse);

  // DeleteHowIs
  //
  // DeleteHowIs deletes an existing how is doc on the channel module of the blockchain.
  rpc DeleteHowIs(MsgDeleteHowIs) returns (MsgDeleteHowIsResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateChannel {
  string creator = 1;
  string label = 2;
  string description = 3;
  sonrio.sonr.object.ObjectDoc object_to_register = 4;
  sonrio.sonr.registry.Session session = 5;
}

message MsgCreateChannelResponse {
// Code of the response
  int32 code = 1;

  // Message of the response
  string message = 2;

  // HowIs of the Channel
  HowIs how_is = 3;
}

message MsgDeactivateChannel {
  string creator = 1;
  string did = 2;
  sonrio.sonr.registry.Session session = 3;
}

message MsgDeactivateChannelResponse {
// Code of the response
  int32 code = 1;

  // Message of the response
  string message = 2;
}


message MsgUpdateChannel {
  string creator = 1;
  string did = 2;
  string label = 3;
  string description = 4;
  sonrio.sonr.object.ObjectDoc object_to_register = 5;
  sonrio.sonr.registry.Session session = 6;
}

message MsgUpdateChannelResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;
}

message MsgCreateHowIs {
  string creator = 1;
  string did = 2;
  ChannelDoc channel = 4;
}
message MsgCreateHowIsResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    HowIs how_is = 3;
}

message MsgUpdateHowIs {
  string creator = 1;
  string did = 2;
  ChannelDoc channel = 4;
}
message MsgUpdateHowIsResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    HowIs how_is = 3;}

message MsgDeleteHowIs {
  string creator = 1;
  string did = 2;
}

message MsgDeleteHowIsResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;
}

// this line is used by starport scaffolding # proto/tx/message
